--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#202020"
-    tools:context="com.android.support.MainActivity">
+    android:background="#121212"
+    tools:context="com.ruihq.aumm.MainActivity">
+
 </FrameLayout>
