--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#121212"
-    tools:context="com.ruihq.aumm.MainActivity">
+    tools:context="com.android.support.MainActivity">
 
 </FrameLayout>
